--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -159,38 +159,46 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/iv_makeup"
-        android:layout_width="200dp"
-        android:layout_height="160dp"
-        android:src="@drawable/picture_camera"
-        android:padding="4dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
-    <LinearLayout
-        android:id="@+id/ll_bottom"
+    <FrameLayout
+        android:id="@+id/fl_upper_preview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/preview_mock"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:text="9999999999999999999999999999999999999999999999999999999999999999999"
-            android:textColor="@color/cyan"
-            android:textSize="16sp" />
         <ImageView
-            android:id="@+id/iv_next_step"
-            android:layout_width="70dp"
-            android:layout_height="50dp"
-            android:src="@drawable/next_step"
-            android:textSize="16sp"
-            android:scaleType="fitCenter"
-            android:layout_gravity="bottom"/>
-    </LinearLayout>
+            android:id="@+id/iv_makeup"
+            android:layout_width="200dp"
+            android:layout_height="160dp"
+            android:src="@drawable/picture_camera"
+            android:padding="4dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="right|top"/>
+        <LinearLayout
+            android:id="@+id/ll_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom">
+
+            <TextView
+                android:id="@+id/tv_bottom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/preview_mock"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:text="9999999999999999999999999999999999999999999999999999999999999999999"
+                android:textColor="@color/cyan"
+                android:textSize="16sp" />
+            <ImageView
+                android:id="@+id/iv_next_step"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
+                android:src="@drawable/next_step"
+                android:textSize="16sp"
+                android:scaleType="fitCenter"
+                android:layout_gravity="bottom"/>
+        </LinearLayout>
+    </FrameLayout>
 </RelativeLayout>
