--- a/app/src/main/res/layout/community_hori_item.xml
+++ b/app/src/main/res/layout/community_hori_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="3dp"
     android:layout_marginRight="3dp">
 
-    <ImageView
+    <com.example.hp.challengecup.custom.RoundImageView
         android:id="@+id/comm_recy_hori_img"
         android:layout_width="130dp"
         android:layout_height="160dp"
-        android:scaleType="fitXY" />
-
+        android:scaleType="fitXY"
+        android:src="@drawable/comm_recy_hori_1"
+        app:borderRadius="4dp"
+        app:type="round"/>
 </LinearLayout>
