--- a/app/src/main/res/layout/daily_vertical_item.xml
+++ b/app/src/main/res/layout/daily_vertical_item.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<com.skyline.widget.layout.RoundCornerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="3dp"
+    app:cornerRadius="4dp">
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:layout_margin="3dp"
-    android:background="@android:color/white"
-    android:paddingTop="3dp"
-    android:paddingRight="3dp"
-    android:paddingLeft="3dp"
-    android:paddingBottom="3dp">
+    android:background="@android:color/white">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,3 +41,4 @@
         android:layout_alignParentRight="true"
         android:visibility="gone"/>
 </RelativeLayout>
+</com.skyline.widget.layout.RoundCornerLayout>
