--- a/app/src/main/res/layout/home_hori_item.xml
+++ b/app/src/main/res/layout/home_hori_item.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    
-    <ImageView
-        android:id="@+id/iv_home_horiz_item"
-        android:layout_width="190dp"
-        android:layout_height="110dp"
-        android:scaleType="centerCrop"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"/>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_main"
+    android:layout_width="190dp"
+    android:layout_height="110dp"
+    android:layout_marginLeft="3dp"
+    android:layout_marginRight="3dp">
 
-</LinearLayout>
+    <com.example.hp.challengecup.custom.RoundImageView
+        android:id="@+id/iv_home_horiz_item"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/home_list_2"
+        app:type="round"
+        app:borderRadius="4dp"/>
+</RelativeLayout>
