--- a/app/src/main/res/layout/activity_register_two.xml
+++ b/app/src/main/res/layout/activity_register_two.xml
@@ -13,7 +13,8 @@
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="28dp"/>
+        android:layout_marginTop="28dp"
+        android:src="@drawable/add_portrait"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
