--- a/app/src/main/res/layout/fragment_myself.xml
+++ b/app/src/main/res/layout/fragment_myself.xml
@@ -16,6 +16,7 @@
             android:src="@drawable/user_default"
             android:layout_centerInParent="true"/>
         <TextView
+            android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -52,7 +53,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
-            <com.example.hp.challengecup.custom.NumImageView
+            <com.example.myview.imgview.NumImageView
+                android:id="@+id/iv_waitToPay"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/myself_unpaid"
