--- a/app/src/main/res/layout/register_bar.xml
+++ b/app/src/main/res/layout/register_bar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/common_bar"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="@color/main_nav_bg">
